# at-runner

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASE.md  SECURITY.md  pyproject.toml  workspace.py
.codex/: hooks.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  commitizen.yml  release.yml
client/python/: README.md  generate_stubs.sh  pyproject.toml
client/python/examples/: kraken_munk.py
client/python/src/at_runner/: __init__.py  session.py
client/python/src/at_runner/_generated/at/runner/v1/: runner_pb2.py  runner_pb2.pyi  runner_pb2_grpc.py
client/python/tests/: test_integration.py
client/rust/: Cargo.toml  build.rs
client/rust/src/: lib.rs  session.rs
client/rust/tests/: integration.rs
proto/at/runner/v1/: runner.proto
scripts/: clean-rebuild.sh  commitizen-pre-bump-cargo-lock.sh  ensure-at-tests.sh  fetch-at-tests.sh  server-start.sh  server-stop.sh  test-integration.sh  test-smoke.sh  test-sweep-compose.sh  test-sweep.sh
service/: Cargo.toml  build.rs
service/src/: executor.rs  files.rs  main.rs  pipeline.rs  runner.rs  session.rs  validation.rs  workspace.rs
testing/: docker-compose.yml
testing/python/: Dockerfile  run_tests.py
testing/rust/: Cargo.toml  Dockerfile
testing/rust/src/: main.rs
testing/sweep/: Dockerfile
