[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "at-runner-workspace"
version = "0.2.0"
description = "Workspace metadata for tooling (Commitizen). Not published to PyPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["commitizen>=3.13"]

[tool.setuptools]
py-modules = ["workspace"]

# Keep editable-install metadata out of the repo root (setuptools still names it *.egg-info).
[tool.distutils.egg_info]
egg_base = ".egg-base"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
changelog_file = "CHANGELOG.md"
update_changelog_on_bump = true
version_files = [
    "service/Cargo.toml:^version",
    "client/python/pyproject.toml:^version",
    "client/rust/Cargo.toml:^version",
    "pyproject.toml:^version",
]
