[package]
name = "at-runner"
version = "0.2.3"
edition = "2021"

[[bin]]
name = "at-runner"
path = "src/main.rs"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
tonic-health = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
libc = "0.2"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14"
