[build-system]
requires = ["setuptools>=68", "grpcio-tools>=1.62"]
build-backend = "setuptools.build_meta"

[project]
name = "at-runner"
version = "0.2.0"
description = "Python client library for the AT Runner gRPC service"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.62",
    "protobuf>=5.26",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.62",
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]
