[build-system]
requires = ["setuptools>=68", "grpcio-tools>=1.62"]
build-backend = "setuptools.build_meta"

[project]
name = "at-runner"
version = "0.3.0"
description = "Python client library for the AT Runner gRPC service"
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
dependencies = [
    "grpcio>=1.80",
    "protobuf>=6.31.1",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.80",
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]
